--- a/css/style.css
+++ b/css/style.css
@@ -158,7 +158,7 @@ a, .anchor {
       float: left;
       margin-right: 5px; }
       .navbar .login-button:hover{
-        background-color: yellow;
+        background-color:  rgb( 34, 32, 79 );
       }
      
 .button-one{
@@ -182,7 +182,7 @@ color: #ffffff;
     -webkit-transition: all 0.2s ease-in-out;
     -o-transition: all 0.2s ease-in-out; }
    .button-one:hover{
-    background-color: yellow;
+    background-color:  rgb( 34, 32, 79 );
     color:white;
    }
   .navbar-nav > li {
@@ -212,7 +212,7 @@ color: #ffffff;
   .navbar-nav > li > a:hover {
     font-weight: bold;
     font-size:20px;
-    color:#f5f507;
+    color: rgb( 34, 32, 79 );
 }
  
 
@@ -257,7 +257,7 @@ color: #ffffff;
     .dropdown li a:hover {
      font-weight: bold;
     font-size:16px;
-    color:#f5f507; }
+    color:rgb(11,9,102); }
     .dropdown li .dropdown.level2 {
       top: 0px;
       margin-top: 0;
@@ -510,7 +510,7 @@ a.button-two {
   margin: 0; }
   a.button-two:hover {
 
-    background-color: yellow;
+    background-color:  rgb( 34, 32, 79 )
     color:white;}
 
 a.text-link {
@@ -2904,20 +2904,15 @@ footer .container #part2 ul , footer .container #part3 ul{
   justify-content: space-around;
 }
 .social-icon ul li a{
-  width:100px;
-  height:100px;
+  width:50px;
+  height:50px;
   background-color: #f5f6fa;
   border-radius: 50px;
   text-align: center;
-  box-shadow: 1px 4px 2px 2px #dcdde1;
+  
   display: flex;
   justify-content: center;
   align-items: center;
-}
-.social-icon ul li a:hover{
-  background-color:yellow;
-  color:#3b5998;
- 
 }
 
 @media (max-width: 767px) {
