--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,90 @@
  27.Footer
 -------------------------------------------------*/
 *{
+        font-family:'Quattrocento Sans', sans-serif;
+    }
+    li{
+        position: relative;
+    }
+    .dropdown{
+        position: absolute;
+    ;
+    }
+    #d2{
+        position: absolute;
+        left: 100%;
+        color:black;
+    }
+     a{
+        font-family:'Quattrocento Sans', sans-serif;
+        font-weight:800;
+    }.part2{
+      margin-top:13vh;
+      margin-left: 20px;
+    }
+    .innerslide{
+      width:500px;
+      height: 400px;
+      margin:auto;
+    }
+    .jumbotron{
+      background-image:url("img/slide4.jpg");
+      background-color: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4));
+      background-size:cover;
+      background-repeat: no-repeat;
+    }
+     .form{
+      display: block;
+      margin:13vh auto;
+      font-size:16px;
+      width: 90%;
+      line-height: 2em;
+      
+      border:2px solid #1a0966;
+      
+
+    }
+    .header{
+      width:100%;
+      height:10vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+         
+      background-color: #1a0966;
+      
+      font-weight: bolder;
+      color: #fff;
+      
+    }
+    .form input{
+      width:50%;
+      height: auto;
+      margin:auto;
+    }
+   
+    .form label{
+      display: block;
+      width:50%;
+      line-height: 38px;
+      height: auto;
+      margin:auto;
+    }
+
+    .mobile-nav ul li ul{
+      background-color: #000;
+    }
+    .mobile-nav ul li{
+        margin:2em 0;
+    }
+   
+
+  @media(max-width:768px){
+    
+
+    }
+  }
+*{
   margin:0px;
   padding:0px;
   box-sizing:border-box;
@@ -2937,5 +3021,20 @@ footer .container #part2 ul , footer .container #part3 ul{
   section.single-course-section .course-reviews .course-reviews-inner .ratings-box .average-box {
     margin-right: 0; }
   section.single-course-section .course-reviews .course-reviews-inner .ratings-box .detailed-box ul.detailed-lines li div.outer {
-    width: 100%; } }
+    width: 100%; }
+
+#classes{
+      background-color:#212529;
+    }
+    #d2{
+      background-color: #212529;
+    }
+    #cone{
+      line-height: 1.5em;
+    }
+    .form{
+      width:100%;
+        margin:10px;
+}
+     }
 
