--- a/css/style.css
+++ b/css/style.css
@@ -51,17 +51,8 @@
       margin-top:13vh;
       margin-left: 20px;
     }
-    .innerslide{
-      width:500px;
-      height: 400px;
-      margin:auto;
-    }
-    .jumbotron{
-      background-image:url("img/slide4.jpg");
-      background-color: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4));
-      background-size:cover;
-      background-repeat: no-repeat;
-    }
+  
+  
      .form{
       display: block;
       margin:13vh auto;
@@ -80,7 +71,7 @@
       justify-content: center;
       align-items: center;
          
-      background-color: #1a0966;
+      background-color: rgb(36, 25, 105);
       
       font-weight: bolder;
       color: #fff;
@@ -2985,7 +2976,11 @@ footer .container #part2 ul , footer .container #part3 ul{
 .social-icon ul{
   list-style: none;
   display: flex;
-  justify-content: space-around;
+  justify-content: flex-end;
+  margin:10px;
+}
+.social-icon ul li{
+  margin:10px;
 }
 .social-icon ul li a{
   width:50px;
@@ -2998,6 +2993,24 @@ footer .container #part2 ul , footer .container #part3 ul{
   justify-content: center;
   align-items: center;
 }
+.social-icon ul li a .fa-facebook-f {
+  color: #3b5998;
+  background-image: linear-gradient( to bottom, transparent 20%, white 20%, white 93%, transparent 93% );
+  background-size: 55%;
+  background-position: 70% 0;
+  background-repeat: no-repeat;
+}
+
+.social-icon ul li .twitter{
+   background: #55ACEE !important;
+  color: white !important;
+}
+.social-icon ul li .google{
+  background: #dd4b39;
+  color: white;
+
+}
+
 
 @media (max-width: 767px) {
   section.single-course-section .course-reviews .course-reviews-inner .ratings-box .detailed-box ul.detailed-lines li div.outer {
