--- a/css/style.css
+++ b/css/style.css
@@ -32,12 +32,14 @@
 *{
         font-family:'Quattrocento Sans', sans-serif;
     }
+   
     li{
         position: relative;
     }
     .dropdown{
         position: absolute;
-    ;
+        background-color: lightgrey !important;
+    
     }
     #d2{
         position: absolute;
@@ -60,7 +62,7 @@
       width: 90%;
       line-height: 2em;
       
-      border:2px solid #1a0966;
+      border:2px solid yellow;
       
 
     }
@@ -259,6 +261,10 @@ color: #ffffff;
    .button-one:hover{
     background-color:  rgb( 34, 32, 79 );
     color:white;
+   }
+   .navbar{
+    height:12vh;
+    background-color:lightgrey !important;
    }
   .navbar-nav > li {
     position:relative;
