--- a/css/style.css
+++ b/css/style.css
@@ -55,43 +55,60 @@
     }
   
   
-     .form{
-      display: block;
-      margin:13vh auto;
-      font-size:16px;
-      width: 90%;
-      line-height: 2em;
-      
-      border:2px solid yellow;
-      
+.f{
+  width:100%;
+  height:100%;
+  background-image:url("../images/bkk.jpg");
+  background-size: 100% 100%;
+  box-shadow: 0 10px 20px -6px #000;
+}
+ .header{
 
+      
+     
+    
+      
+    
+      
+      
     }
-    .header{
+    .f form{
       width:100%;
-      height:10vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-         
-      background-color: rgb(36, 25, 105);
-      
-      font-weight: bolder;
-      color: #fff;
-      
+      float: right;
     }
-    .form input{
-      width:50%;
+        .f input{
+      width:80%;
       height: auto;
       margin:auto;
     }
    
-    .form label{
+    .f label{
       display: block;
-      width:50%;
-      line-height: 38px;
+      width:80%;
+      color:#BE3437;
+      font-size:16px;
+      line-height: 30px;
+      font-weight: bold;
+      font-weight: bolder;
       height: auto;
       margin:auto;
     }
+    .f form input{
+      background:none;
+      border:0px;
+      border-bottom:2px solid  black;
+  
+    }
+    .f form #textarea
+{
+  border:0px;
+  border-bottom:2px solid rgb(17,3,103);
+  display: block;
+  width:80%;
+  margin:auto;
+  background:none;
+  
+}
 
     .mobile-nav ul li ul{
       background-color: #000;
@@ -102,9 +119,11 @@
    
 
   @media(max-width:768px){
-    
-
+    .f{
+      display:none;
     }
+
+    
   }
 *{
   margin:0px;
